...
        
        switch indexPath.row {
        case 0:
            cell.textLabel?.text = "Flight Plan"
            cell.detailTextLabel?.text = ""
        case 1:
            cell.textLabel?.text = "Image Download"
            cell.detailTextLabel?.text = ""
        case 2:
            cell.textLabel?.text = "View Images"
            cell.detailTextLabel?.text = ""
        default:
            cell.textLabel?.text = "test"
            cell.detailTextLabel?.text = "test"
        }
        
...
