...
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZWh-8t-5th">
                                <rect key="frame" x="387" y="537" width="250" height="52"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <inset key="contentEdgeInsets" minX="10" minY="15" maxX="10" maxY="15"/>
                                <size key="titleShadowOffset" width="2.2250738585072014e-308" height="0.0"/>
                                <state key="normal" title="Open">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="o6h-pm-zW8" kind="show" id="9AZ-lE-dom"/>
                                </connections>
                            </button>
...
